fixed 1px extra padding and prevented tabs generation when there is only one language

--- a/qdrant-landing/themes/qdrant/static/css/lang-switcher.css
+++ b/qdrant-landing/themes/qdrant/static/css/lang-switcher.css
@@ -3,7 +3,7 @@
 }
 .lang-tabs {
     display: block;
-    min-height: 27px;
+    min-height: 26px;
 }
 .lang-tabs__button {
     padding: 2px 4px 5px;
